[gd_scene load_steps=33 format=3 uid="uid://rpl5amivov5f"]

[ext_resource type="Script" path="res://Scripts/Entities/player.gd" id="1_7gcer"]
[ext_resource type="Texture2D" uid="uid://dng2ohdubklb0" path="res://Assets/Textures/crosshair.png" id="2_suhvn"]
[ext_resource type="Script" path="res://Scripts/Misc/CamNode3D.gd" id="2_to3yv"]
[ext_resource type="Shader" path="res://Shaders/pixelate.gdshader" id="4_1o6bh"]
[ext_resource type="Script" path="res://Scripts/Misc/meshinterpolation.gd" id="4_xd1iw"]
[ext_resource type="PackedScene" uid="uid://dbj563ox2wh47" path="res://Scenes/Menus/inv_ingame_menu.tscn" id="6_inds5"]
[ext_resource type="LabelSettings" uid="uid://4q4ec65ooiba" path="res://menu_font.tres" id="7_yux4u"]

[sub_resource type="Animation" id="Animation_md8la"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tmr34"]
resource_name = "riflewobble"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.9, 1.43333),
"transitions": PackedFloat32Array(1.31951, 1.31951, 1.31951, 1.31951),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.01, 0.008, 0), Vector3(0, 0, 0), Vector3(-0.01, 0.008, 0)]
}

[sub_resource type="Animation" id="Animation_noy3w"]
resource_name = "wobble"
length = 1.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.8, 1.26667),
"transitions": PackedFloat32Array(1.31951, 1.31951, 1.31951, 1.31951),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.02, 0.016, 0), Vector3(0, 0, 0), Vector3(-0.02, 0.016, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0s5x"]
_data = {
"RESET": SubResource("Animation_md8la"),
"riflewobble": SubResource("Animation_tmr34"),
"wobble": SubResource("Animation_noy3w")
}

[sub_resource type="BoxMesh" id="BoxMesh_u4mwl"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_je7ht"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8cyek"]
shader = ExtResource("4_1o6bh")
shader_parameter/pixel_size = 2.0

[sub_resource type="Animation" id="Animation_x5ols"]
resource_name = "HP bar shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Hbar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(0.0665398, 0.0915055, 0.532317),
"update": 0,
"values": [Vector2(30, -17), Vector2(30, -27), Vector2(30, -17)]
}

[sub_resource type="Animation" id="Animation_yyfhu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Hbar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eglyk"]
_data = {
"HP bar shake": SubResource("Animation_x5ols"),
"RESET": SubResource("Animation_yyfhu")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhvey"]
shader = ExtResource("4_1o6bh")
shader_parameter/pixel_size = 3.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wx2fv"]
radius = 0.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_od6rl"]

[sub_resource type="Animation" id="Animation_j7bud"]
resource_name = "FadeToBlack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pvhom"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.796454, -0.396346)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_m67pr"]
resource_name = "crouch"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.796454, -0.396346), Vector3(0, -0.296, -0.396)]
}

[sub_resource type="Animation" id="Animation_m131b"]
resource_name = "uncrouch"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CamNode3D/CamSmooth/PCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.296, -0.396), Vector3(0, 0.796454, -0.396346)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ase6f"]
_data = {
"FadeToBlack": SubResource("Animation_j7bud"),
"RESET": SubResource("Animation_pvhom"),
"crouch": SubResource("Animation_m67pr"),
"uncrouch": SubResource("Animation_m131b")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1q84g"]
size = Vector3(0.75, 0.3, 0.75)

[sub_resource type="Animation" id="Animation_csk3t"]
resource_name = "FadeToBlack"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_shaff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CamNode3D/CanvasLayer/LevelEnd/FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u4gn5"]
resource_name = "TextFadeAway"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w8uab"]
resource_name = "TextPopUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CamNode3D/CanvasLayer/PopUpText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3dey"]
_data = {
"FadeToBlack": SubResource("Animation_csk3t"),
"RESET": SubResource("Animation_shaff"),
"TextFadeAway": SubResource("Animation_u4gn5"),
"TextPopUp": SubResource("Animation_w8uab")
}

[sub_resource type="AudioStream" id="AudioStream_7mvji"]

[node name="Player" type="CharacterBody3D" groups=["Persist", "player"]]
collision_layer = 4
collision_mask = 7
floor_constant_speed = true
floor_max_angle = 0.872665
script = ExtResource("1_7gcer")
resetinven = null
passive_glow = true
doublejump_able = null
godmode = null

[node name="CamNode3D" type="Node3D" parent="."]
script = ExtResource("2_to3yv")

[node name="CamSmooth" type="Node3D" parent="CamNode3D"]
unique_name_in_owner = true

[node name="PCamera" type="Camera3D" parent="CamNode3D/CamSmooth"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, -7.10543e-15, 0, 7.10543e-15, 1, 0, 0.796454, -0.396346)
fov = 90.0

[node name="Interact" type="RayCast3D" parent="CamNode3D/CamSmooth/PCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 7.10543e-15, 0, -7.10543e-15, 1, 0, -0.00645399, 0.396346)
target_position = Vector3(0, 0, -2)
hit_from_inside = true
collide_with_areas = true

[node name="SwordSpawn" type="Marker3D" parent="CamNode3D/CamSmooth/PCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.148851, 0.441268, -0.206084)

[node name="WeaponBobble" type="Node3D" parent="CamNode3D/CamSmooth/PCamera"]
unique_name_in_owner = true

[node name="Bobbloid" type="AnimationPlayer" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_d0s5x")
}

[node name="SwordBobbleLoc" type="Marker3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.72714, -0.4309, -0.517)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble/SwordBobbleLoc"]
visible = false
mesh = SubResource("BoxMesh_u4mwl")

[node name="ShieldBobbleLoc" type="Marker3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.51278, -0.237164, -0.312043)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble/ShieldBobbleLoc"]
visible = false
mesh = SubResource("BoxMesh_je7ht")

[node name="BowBobble" type="Marker3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble"]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="CamNode3D/CamSmooth/PCamera/WeaponBobble/BowBobble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.184654, -0.219634)
visible = false
mesh = SubResource("BoxMesh_je7ht")

[node name="CanvasLayer2" type="CanvasLayer" parent="CamNode3D"]

[node name="Pixelate" type="ColorRect" parent="CamNode3D/CanvasLayer2"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_8cyek")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="CamNode3D"]

[node name="CenterContainer" type="CenterContainer" parent="CamNode3D/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="CamNode3D/CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_suhvn")

[node name="Deathscreen" type="Control" parent="CamNode3D/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CamNode3D/CanvasLayer/Deathscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="CamNode3D/CanvasLayer/Deathscreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -23.0
offset_right = 69.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
text = "You Died"

[node name="magtext" type="Label" parent="CamNode3D/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -47.0
offset_right = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 34
label_settings = ExtResource("7_yux4u")

[node name="Health" type="Control" parent="CamNode3D/CanvasLayer" groups=["hud"]]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Hbar" type="ProgressBar" parent="CamNode3D/CanvasLayer/Health"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 30.0
offset_top = -17.0
offset_right = 250.0
offset_bottom = 33.0
step = 1.0
value = 100.0
rounded = true
show_percentage = false

[node name="heltext" type="Label" parent="CamNode3D/CanvasLayer/Health/Hbar"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -23.5
offset_right = 74.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 34
text = "FILLER"
label_settings = ExtResource("7_yux4u")
horizontal_alignment = 1

[node name="HealthAnims" type="AnimationPlayer" parent="CamNode3D/CanvasLayer/Health"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_eglyk")
}

[node name="ammotext" type="Label" parent="CamNode3D/CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -90.0
offset_right = -4.0
offset_bottom = -43.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 34
label_settings = ExtResource("7_yux4u")

[node name="LevelEnd" type="Control" parent="CamNode3D/CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FadeToBlack" type="ColorRect" parent="CamNode3D/CanvasLayer/LevelEnd"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Pixelate Hud" type="ColorRect" parent="CamNode3D/CanvasLayer"]
material = SubResource("ShaderMaterial_dhvey")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DashText" type="Label" parent="CamNode3D/CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Press shift to dash"

[node name="Inv Menu" parent="CamNode3D/CanvasLayer" instance=ExtResource("6_inds5")]
unique_name_in_owner = true
visible = false

[node name="PopUpText" type="Label" parent="CamNode3D/CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -51.0
offset_right = 54.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "Filler"
label_settings = ExtResource("7_yux4u")

[node name="PopUpTimer" type="Timer" parent="CamNode3D/CanvasLayer/PopUpText"]
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wx2fv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_od6rl")
script = ExtResource("4_xd1iw")

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ase6f")
}

[node name="DashLength" type="Timer" parent="."]
wait_time = 0.267
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SMGShootCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.06
one_shot = true

[node name="StairsForward" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.45, -0.789556)
target_position = Vector3(0, -0.55, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.596649, 0)
light_color = Color(1, 1, 0.870588, 1)
light_energy = 2.0
light_indirect_energy = 3.0
omni_range = 18.0

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.840963, 0)
shape = SubResource("BoxShape3D_1q84g")

[node name="HudAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3dey")
}

[node name="Footstep" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
stream = SubResource("AudioStream_7mvji")
unit_size = 1.0
pitch_scale = 0.8

[connection signal="child_exiting_tree" from="CamNode3D/CamSmooth/PCamera/SwordSpawn" to="." method="_on_sword_spawn_child_exiting_tree"]
[connection signal="timeout" from="CamNode3D/CanvasLayer/PopUpText/PopUpTimer" to="." method="_on_pop_up_timer_timeout"]
[connection signal="animation_finished" from="PlayerAnim" to="." method="_on_player_anim_animation_finished"]
[connection signal="timeout" from="DashLength" to="." method="_on_dash_length_timeout"]
[connection signal="animation_finished" from="HudAnim" to="." method="_on_hud_anim_animation_finished"]
